[cs-demo] CSDSidebar - Fix width of CSDPreview when sidebar opens and closes
- Changes CSDSidebar and CSDHeading styling when sidebar is closed
- Fix overflowing prop tables

--- a/cs-ui-demo/src/sass/_csd-header.scss
+++ b/cs-ui-demo/src/sass/_csd-header.scss
@@ -86,3 +86,7 @@
 		}
 	}
 }
+
+.csd-sidebar-wrapper-closed + .components-preview > .csd-sidebar-wrapper-closed + .csd-page > .csd-header-wrapper .csd-heading {
+	padding-inline-start: 3rem !important;
+}
