--- a/cs-ui-demo/src/sass/previews/_preview-table.scss
+++ b/cs-ui-demo/src/sass/previews/_preview-table.scss
@@ -35,6 +35,7 @@
 				&:last-child {
 					border-top-right-radius: 0.25rem;
 					white-space: normal;
+					min-width: 20rem;
 				}
 			}
 		}
@@ -65,6 +66,7 @@
 			}
 
 			.properties-table-cell {
+				max-width: 20rem;
 				display: table-cell;
 				white-space: nowrap;
 				@include sc(--csd-prop-table-c);
@@ -79,6 +81,21 @@
 				&:nth-child(2) .cs-tooltip-wrapper {
 					margin: 0 auto;
 				}
+
+				&:nth-child(3) > .csd-inline-code:not(:last-child) {
+					margin-block-end: 0.25rem;
+				}
+
+				.csd-inline-code {
+					overflow: hidden;
+					text-overflow: ellipsis;
+					white-space: nowrap;
+					max-width: 100%;
+
+					&.csd-inline-code-custom {
+						margin-block-end: 0.25rem;
+					}
+				}
 			}
 		}
 
@@ -88,10 +105,20 @@
 			}
 		}
 
-		.properties-table-row:not(:first-of-type) .properties-table-cell {
-			@include css4 {
-				border-top: 1px solid cvar(--csd-prop-table-br);
+		.properties-table-row {
+			&:not(:first-of-type) .properties-table-cell {
+				@include css4 {
+					border-top: 1px solid cvar(--csd-prop-table-br);
+				}
+			}
+
+			.properties-table-cell:nth-child(3) {
+				padding-block-start: 1rem;
 			}
 		}
 	}
+}
+
+.cs-tooltip-body > .csd-inline-code + br {
+	display: none;
 }
